--- a/dev/views/index.twig
+++ b/dev/views/index.twig
@@ -2,10 +2,25 @@
 
 {% block page %}
     <section id="main">
-        <h1>Index</h1>
-        <p class="important">
-            Welcome on my awesome homepage.
-        </p>
+        <img src="assets/images/works-legend.png" alt="">
+        <section id="portfolio">
+            <aside id="projects">rfgergregreg</aside>
+            <article id="project">
+                <figure class="images-project">
+                    <img src="http://lorempixel.com/400/200/sports/1/" alt="">
+                </figure>
+                <div class="desc-project">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+
+            </article>
+        </section>
     </section>
 
 {% endblock %}
