--- a/dev/views/layouts/layout.html.twig
+++ b/dev/views/layouts/layout.html.twig
@@ -13,9 +13,9 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#">Details</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Twitter</a></li>
+					<li><a href="#">TWITTER</a></li>
+					<li><a href="#">BLOG</a></li>
+					<li><a href="#">DETAILS</a></li>
 				</ul>
 			</nav>
 		</header>
