--- a/dev/views/index.twig
+++ b/dev/views/index.twig
@@ -7,7 +7,7 @@
             <aside id="projects">rfgergregreg</aside>
             <article id="project">
                 <figure class="images-project">
-                    <img src="http://lorempixel.com/400/200/sports/1/" alt="">
+                    <img src="ss" alt="">
                 </figure>
                 <div class="desc-project">
                     <h3>Title</h3>
