--- a/dev/views/layouts/layout.html.twig
+++ b/dev/views/layouts/layout.html.twig
@@ -13,13 +13,24 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#">TWITTER</a></li>
-					<li><a href="#">BLOG</a></li>
 					<li><a href="#">DETAILS</a></li>
+					<li><a href="#">BLOG</a></li>
+					<li><a href="#">TWITTER</a></li>
 				</ul>
 			</nav>
 		</header>
 		{% block page %}{% endblock %}
 	</section>
+	<script src="assets/javascripts/settings.js"></script>
+
+	<script src="assets/vendors/jquery/dist/jquery.js"></script>
+	<script src="assets/vendors/underscore/underscore.js"></script>
+	<script src="assets/vendors/backbone/backbone.js"></script>
+
+	<script src="assets/javascripts/Project.js"></script>
+	<script src="assets/javascripts/Projects.js"></script>
+	<script src="assets/javascripts/ProjectView.js"></script>
+
+	<script src="assets/javascripts/Router.js"></script>
 </body>
 </html>
