update node structure

--- a/dev/views/layouts/layout.html.twig
+++ b/dev/views/layouts/layout.html.twig
@@ -22,8 +22,9 @@
 		{% block page %}{% endblock %}
 	</section>
 	<script src="assets/javascripts/settings.js"></script>
+	<script src="assets/javascripts/foo.js"></script>
 
-	<script src="assets/vendors/jquery/dist/jquery.js"></script>
+	<!--<script src="assets/vendors/jquery/dist/jquery.js"></script>
 	<script src="assets/vendors/underscore/underscore.js"></script>
 	<script src="assets/vendors/backbone/backbone.js"></script>
 
@@ -31,6 +32,6 @@
 	<script src="assets/javascripts/Projects.js"></script>
 	<script src="assets/javascripts/ProjectView.js"></script>
 
-	<script src="assets/javascripts/Router.js"></script>
+	<script src="assets/javascripts/Router.js"></script>-->
 </body>
 </html>
