--- a/dev/assets/stylesheets/style.scss
+++ b/dev/assets/stylesheets/style.scss
@@ -1,98 +1,7 @@
 @import "reset";
+@import "mixins";
 
-@import "bourbon";
-@import "neat";
+@import "base";
 
-/*
-    RESET
-*/
-
-a {
-    text-decoration: none;
-}
-
-html {
-    width: 100%;
-    height: 100%;
-    background-color: #FFF;
-    font-family: Helvetica, Arial, sans-serif;
-}
-
-section#wrapper {
-    @include outer-container;
-}
-
-header {
-    #desc {
-/*         @include span-columns(3);
-        @include shift(4); */
-    }
-
-    nav {
-        @include span-columns(3);
-        @include shift(9);
-        @include row('block', 'RTL');
-        ul {
-            text-align: right;
-            li {
-                display: inline-block;
-
-                a {
-                    @include transition (all 200ms ease-in-out);
-                    color: black;
-                    font-size: 16px;
-
-                    &:visited {
-                        color: black;
-                    }
-                    &:hover {
-                        color: #6E6B87;
-                    }
-                }
-
-                &:nth-child(2), &:nth-child(3) {
-                        &:after {
-                            content: ' -';
-                        }
-                    }
-
-            }
-        }
-    }
-
-    @include pad(0 0 5px 0);
-    border-bottom: 1px black solid;
-}
-
-#main {
-    @include outer-container;
-
-    #portfolio {
-        @include span-columns(12);
-        @include row();
-        aside#projects {
-            @include span-columns(3);
-        }
-        #project {
-            @include span-columns(9);
-            @include row();
-            .images-project {
-                @include span-columns(9);
-
-                img {
-                    max-width: 100%;
-                }
-            }
-            .desc-project {
-                h3 {
-                    font-weight: bold;
-                    font-size: 15px;
-                }
-                color: black;
-                font-size: 12px;
-
-                @include span-columns(3);
-            }
-        }
-    }
-}
+@import "header";
+@import "main";
