--- a/dev/views/index.twig
+++ b/dev/views/index.twig
@@ -2,15 +2,33 @@
 
 {% block page %}
     <section id="main">
-        <img src="assets/images/works-legend.png" alt="">
+        <ul id="legend-work">
+            <li>WORKS</li>
+            <li>FREE TIME</li>
+        </ul>
         <section id="portfolio">
-            <aside id="projects">rfgergregreg</aside>
+            <aside id="projects">
+                <ul>
+                    <li class="goutte" data-seen="true"></li>
+                    <li class="goutte"></li>
+                    <li class="goutte"></li>
+                    <li class="goutte"></li>
+                    <li class="goutte"></li>
+                    <li class="rond"></li>
+                    <li class="goutte"></li>
+                    <li class="rond"></li>
+                    <li class="rond"></li>
+                    <li class="rond"></li>
+                </ul>
+            </aside>
             <article id="project">
-                <figure class="images-project">
-                    <img src="ss" alt="">
+                <figure id="container-images-project">
+                    <img src="http://lorempixel.com/output/city-q-c-841-480-3.jpg" alt="" />
+                    <img src="http://lorempixel.com/output/city-q-c-841-480-3.jpg" alt="" />
+                    <img src="http://lorempixel.com/output/city-q-c-841-480-3.jpg" alt="" />
                 </figure>
-                <div class="desc-project">
-                    <h3>Title</h3>
+                <div id="container-desc-project">
+                    <h4>Title</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
