--- a/dev/assets/stylesheets/_base.scss
+++ b/dev/assets/stylesheets/_base.scss
@@ -1,7 +1,7 @@
 html, body {
     background-color: white;
     width: 100%;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: $helvetica;
 }
 
 #wrapper {
