--- a/dev/assets/stylesheets/_main.scss
+++ b/dev/assets/stylesheets/_main.scss
@@ -22,6 +22,11 @@
             background-color: blue;
             height: 16px; width: 16px;
 
+            a {
+                display: block;
+                width: inherit; height: inherit;
+            }
+
             // Project have been seen
             &[data-seen="true"] {
                 background-color: green;
@@ -46,18 +51,18 @@
         width: auto;
         vertical-align: top;
         margin-bottom: 19px;
-        opacity: 0;
+        opacity: 0.25;
 
         &:nth-child(1) {
-            @include animation(myfirst, 0.35s, cubic-bezier(.2, 1.13, 1, .99), 0s, forwards);
+            @include animation(fadeIn 0.35s cubic-bezier(.2, 1.13, 1, .99) forwards 0s);
         }
 
         &:nth-child(2) {
-            @include animation(myfirst, 0.35s, cubic-bezier(.2, 1.13, 1, .99), 2*0.45s, forwards);
+            @include animation(fadeIn 0.35s cubic-bezier(.2, 1.13, 1, .99) forwards 2*0.45s);
         }
 
         &:nth-child(3) {
-            @include animation(myfirst, 0.35s, cubic-bezier(.2, 1.13, 1, .99), 3*0.45s, forwards);
+            @include animation(fadeIn 0.35s cubic-bezier(.2, 1.13, 1, .99) forwards 3*0.45s);
         }
     }
 }
@@ -83,13 +88,3 @@
     }
 }
 
- @-webkit-keyframes myfirst {
-    from {opacity: .25;}
-    to {opacity: 1;}
-}
-
-/* Standard syntax */
-@keyframes myfirst {
-    from {opacity: .25;}
-    to {opacity: 1;}
-}
