--- a/dev/assets/stylesheets/_mixins.scss
+++ b/dev/assets/stylesheets/_mixins.scss
@@ -1,5 +1,21 @@
-@mixin animation($animName, $time, $ease, $delay, $isKeepingLastState) {
-    -webkit-animation: $animName $time $ease $delay $isKeepingLastState;
-    -ms-animation: $animName $time $ease $delay $isKeepingLastState;
-    animation: $animName $time $ease $delay $isKeepingLastState;
+@mixin centerFlexbox() {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+
+    -webkit-align-items: center;
+    align-items: center;
+
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+
+    -webkit-justify-content: center;
+    justify-content: center;
 }
