--- a/dev/views/layouts/layout.html.twig
+++ b/dev/views/layouts/layout.html.twig
@@ -2,27 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Goutte et rond</title>
+
+    <meta name="robots" content="index, follow">
+
+    <!-- Start of Facebook Meta Tags -->
+    <meta property="og:title" content="caroleoreb.fr" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://caroleoreb.fr/" />
+    <meta property="og:image" content="http://caroleoreb.fr/" />
+    <meta property="og:site_name" content="caroleoreb.fr"/>
+    <meta property="og:description" content="Graphiste - Sérigraphe - Webdesigner" />
+
+    <!-- End of Facebook Meta Tags -->
+
     <link rel="stylesheet" href="assets/stylesheets/style.css" />
+
+     <script src="assets/vendors/jquery/dist/modernizr.js"></script>
 </head>
 <body>
+    <section id="animation">
+        <div id="main-infos">
+            <img src="assets/images/header-goutte-et-rond.png" alt="foo" />
+            <h1>Victor Gouteyron</h1>
+            <h2>
+                <ul>
+                    <li>Graphiste</li>
+                    <li>Sérigraphe</li>
+                    <li>Webdesigner</li>
+                </ul>
+            </h2>
+        </div>
+    </section>
     <section id="wrapper">
         <header>
-            <div id="main-infos">
-                <img src="assets/images/header-goutte-et-rond.png" alt="foo" />
-                <h1>Victor Gouteyron</h1>
-                <h2>Graphiste - Sérigraphe - Webdesigner</h2>
-                <span>
-                    <a class="main-infos__link" href="mailto:victor.gouteyron@hotmail.fr">mail</a>./ 0669589656
-                </span>
-                <a class="main-infos__link-logo" href="http://www.brbs.fr/" target="_blank">
-                    <img style="display:block; margin: 0 auto;" width="40px" src="assets/images/brbs-logo.png">
-                </a>
-            </div>
+<!--             <div id="main-infos">
+    <img src="assets/images/header-goutte-et-rond.png" alt="foo" />
+    <h1>Victor Gouteyron</h1>
+    <h2>Graphiste - Sérigraphe - Webdesigner</h2>
+    <span>
+        <a class="main-infos__link" href="mailto:victor.gouteyron@hotmail.fr">mail</a>./ 0669589656
+    </span>
+    <a class="main-infos__link-logo" href="http://www.brbs.fr/" target="_blank">
+        <img style="display:block; margin: 0 auto;" width="40px" src="assets/images/brbs-logo.png">
+    </a>
+</div> -->
             <nav id="navigation-header">
                 <ul id="navigation-header__elements">
                     <li><a href="#">DETAILS</a></li>
-                    <li><a href="#">BLOG</a></li>
+                    <li><a href="http://goutteetrond.tumblr.com/" target="_blank">BLOG</a></li>
                     <li><a href="#">TWITTER</a></li>
                 </ul>
             </nav>
@@ -30,13 +58,13 @@
         {% block page %}{% endblock %}
     </section>
     <script src="assets/javascripts/settings.js"></script>
-    <script src="assets/javascripts/foo.js"></script>
-
-    <!--<script src="assets/vendors/jquery/dist/jquery.js"></script>
+    <script src="assets/javascripts/main.js"></script>
+<!--
+    <script src="assets/vendors/jquery/dist/jquery.js"></script>
     <script src="assets/vendors/underscore/underscore.js"></script>
-    <script src="assets/vendors/backbone/backbone.js"></script>
+    <script src="assets/vendors/backbone/backbone.js"></script> -->
 
-    <script src="assets/javascripts/Project.js"></script>
+    <!--<script src="assets/javascripts/Project.js"></script>
     <script src="assets/javascripts/Projects.js"></script>
     <script src="assets/javascripts/ProjectView.js"></script>
 
