--- a/dev/assets/javascripts/tpl/ProjectTpl.hbs
+++ b/dev/assets/javascripts/tpl/ProjectTpl.hbs
@@ -1,10 +1,10 @@
 <figure id="container-images-project">
 	{{#each images}}
-    	<img src="{{ this }}" alt="" />
+    	<img src="{{ this }}" alt="{{ ../title }}" />
 	{{/each}}
 </figure>
-<div id="container-desc-project">
+<div id="container-desc-project" class={{ category }}>
 	{{!-- class is goutte or rond --}}
-    <h4 class={{ category }}>{{ title }}</h4>
+    <h4>{{ title }}</h4>
     <p>{{ description }}</p>
 </div>
