--- a/dev/assets/stylesheets/_main.scss
+++ b/dev/assets/stylesheets/_main.scss
@@ -17,10 +17,18 @@
     display: inline-block;
 
     ul {
+        font-size: 0;
         li {
             display: inline-block;
             background-color: blue;
             height: 16px; width: 16px;
+            margin-bottom: 4px;
+            position: relative;
+            white-space: nowrap;
+
+            &:nth-child(4n-1), &:nth-child(2n) {
+                margin-left: 7px;
+            }
 
             a {
                 display: block;
@@ -29,7 +37,14 @@
 
             // Project have been seen
             &[data-seen="true"] {
-                background-color: green;
+                &:after {
+                    border-top: 1px solid #000;
+                    position: absolute;
+                    content: "";
+                    right: 0;
+                    top: 50%;
+                    left: 0;
+                }
             }
         }
     }
@@ -51,18 +66,18 @@
         width: auto;
         vertical-align: top;
         margin-bottom: 19px;
-        opacity: 0.25;
+        opacity: 0;
 
         &:nth-child(1) {
-            @include animation(fadeIn 0.35s cubic-bezier(.2, 1.13, 1, .99) forwards 0s);
+            @include animation(fadeIn 0.35s linear forwards 0.25s, scale 0.45s ease-out);
         }
 
         &:nth-child(2) {
-            @include animation(fadeIn 0.35s cubic-bezier(.2, 1.13, 1, .99) forwards 2*0.45s);
+            @include animation(fadeIn 0.35s linear forwards 2*0.25s, scale 0.45s ease-out);
         }
 
         &:nth-child(3) {
-            @include animation(fadeIn 0.35s cubic-bezier(.2, 1.13, 1, .99) forwards 3*0.45s);
+            @include animation(fadeIn 0.35s linear forwards 3*0.25s, scale 0.45s ease-out);
         }
     }
 }
@@ -78,8 +93,13 @@
     h4 {
         font-weight: bold;
         font-size: 15px;
+
         #project.rond & {
             color: #acbba9;
+        }
+
+        #project.goutte & {
+            color: #666699;
         }
     }
 
@@ -88,3 +108,10 @@
     }
 }
 
+#loader {
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background-color: white;
+    background-color: rgba(255, 255, 255, .85);
+    display: none;
+}
