--- a/dev/views/layouts/layout.html.twig
+++ b/dev/views/layouts/layout.html.twig
@@ -27,26 +27,26 @@
             <h1>Victor Gouteyron</h1>
             <h2>
                 <ul>
-                    <li>Graphiste</li>
-                    <li>Sérigraphe</li>
-                    <li>Webdesigner</li>
+                    <li style="color:#666699">Graphiste</li>
+                    <li style="color:#cccc99">Sérigraphe</li>
+                    <li style="color:#669999">Webdesigner</li>
                 </ul>
             </h2>
         </div>
     </section>
     <section id="wrapper">
         <header>
-<!--             <div id="main-infos">
-    <img src="assets/images/header-goutte-et-rond.png" alt="foo" />
-    <h1>Victor Gouteyron</h1>
-    <h2>Graphiste - Sérigraphe - Webdesigner</h2>
-    <span>
-        <a class="main-infos__link" href="mailto:victor.gouteyron@hotmail.fr">mail</a>./ 0669589656
-    </span>
-    <a class="main-infos__link-logo" href="http://www.brbs.fr/" target="_blank">
-        <img style="display:block; margin: 0 auto;" width="40px" src="assets/images/brbs-logo.png">
-    </a>
-</div> -->
+            <div id="main-infos">
+                <img src="assets/images/header-goutte-et-rond.png" alt="foo" />
+                <h1>Victor Gouteyron</h1>
+                <h2>Graphiste - Sérigraphe - Webdesigner</h2>
+                <span>
+                    <a class="main-infos__link" href="mailto:victor.gouteyron@hotmail.fr">mail</a>./ 0669589656
+                </span>
+                <a class="main-infos__link-logo" href="http://www.brbs.fr/" target="_blank">
+                    <img style="display:block; margin: 0 auto;" width="40px" src="assets/images/brbs-logo.png">
+                </a>
+            </div>
             <nav id="navigation-header">
                 <ul id="navigation-header__elements">
                     <li><a href="#">DETAILS</a></li>
@@ -57,8 +57,11 @@
         </header>
         {% block page %}{% endblock %}
     </section>
+    <section id="loader"></section>
+
     <script src="assets/javascripts/settings.js"></script>
     <script src="assets/javascripts/main.js"></script>
+
 <!--
     <script src="assets/vendors/jquery/dist/jquery.js"></script>
     <script src="assets/vendors/underscore/underscore.js"></script>
