add details page

--- a/dev/assets/javascripts/tpl/ProjectTpl.hbs
+++ b/dev/assets/javascripts/tpl/ProjectTpl.hbs
@@ -1,6 +1,6 @@
 <figure id="container-images-project">
 	{{#each images}}
-    	<img src="{{ this }}" alt="{{ ../title }}" />
+    	<img src="{{ this }}" alt="{{ ../title }} - img {{ index }}" />
 	{{/each}}
 </figure>
 <div id="container-desc-project" class={{ category }}>
