--- a/dev/views/layouts/layout.html.twig
+++ b/dev/views/layouts/layout.html.twig
@@ -13,12 +13,11 @@
     <meta property="og:image" content="http://caroleoreb.fr/" />
     <meta property="og:site_name" content="caroleoreb.fr"/>
     <meta property="og:description" content="Graphiste - Sérigraphe - Webdesigner" />
-
     <!-- End of Facebook Meta Tags -->
 
     <link rel="stylesheet" href="assets/stylesheets/style.css" />
 
-     <script src="assets/vendors/jquery/dist/modernizr.js"></script>
+     <script src="assets/vendors/modernizr.js"></script>
 </head>
 <body>
     <section id="animation">
@@ -37,7 +36,9 @@
     <section id="wrapper">
         <header>
             <div id="main-infos">
-                <img src="assets/images/header-goutte-et-rond.png" alt="foo" />
+                <a href="#" target="_self">
+                    <img src="assets/images/header-goutte-et-rond.png" alt="foo" />
+                </a>
                 <h1>Victor Gouteyron</h1>
                 <h2>Graphiste - Sérigraphe - Webdesigner</h2>
                 <span>
@@ -61,16 +62,5 @@
 
     <script src="assets/javascripts/settings.js"></script>
     <script src="assets/javascripts/main.js"></script>
-
-<!--
-    <script src="assets/vendors/jquery/dist/jquery.js"></script>
-    <script src="assets/vendors/underscore/underscore.js"></script>
-    <script src="assets/vendors/backbone/backbone.js"></script> -->
-
-    <!--<script src="assets/javascripts/Project.js"></script>
-    <script src="assets/javascripts/Projects.js"></script>
-    <script src="assets/javascripts/ProjectView.js"></script>
-
-    <script src="assets/javascripts/Router.js"></script>-->
 </body>
 </html>
