--- a/dev/assets/stylesheets/_header.scss
+++ b/dev/assets/stylesheets/_header.scss
@@ -14,6 +14,11 @@ header {
         margin: 0 auto 7px auto;
     }
 
+    a.link-header {
+        display: inline-block;
+        text-decoration: none;
+    }
+
     h1 {
         font-weight: bold;
     }
@@ -30,7 +35,7 @@ header {
                 display: inline-block;
                 font-size: 16px;
 
-                &:nth-child(1), &:nth-child(2) {
+                &:nth-child(1) {
                     &:after {
                         content: " -\00a0";
                         color: black;
