update backbone structure

--- a/dev/assets/fonts/font-gouteyron.scss
+++ b/dev/assets/fonts/font-gouteyron.scss
@@ -23,13 +23,12 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-goutte:before {
+.icon-ico-goutte:before {
     content: "\e600";
 }
-.icon-Logo-goutte-et-rond:before {
+.icon-ico-goutteetrond:before {
     content: "\e601";
 }
-
-.icon-rond:before {
+.icon-ico-rond:before {
     content: "\e602";
 }
