--- a/dev/assets/javascripts/tpl/ProjectsListTpl.hbs
+++ b/dev/assets/javascripts/tpl/ProjectsListTpl.hbs
@@ -1,6 +1,6 @@
 <ul>
     {{#each this}}
-        <li data-seen="false" class="{{ title }}">
+        <li data-seen="false" class="{{ category }}">
             <a href="#/{{id}}"></a>
         </li>
     {{/each}}
