--- a/dev/assets/stylesheets/_header.scss
+++ b/dev/assets/stylesheets/_header.scss
@@ -79,7 +79,7 @@ header {
         li {
             display: inline-block;
 
-            &:nth-child(1), &:nth-child(2) {
+            &:nth-child(1) {
                 &:after {
                     content: " -";
                 }
