--- a/dev/views/index.twig
+++ b/dev/views/index.twig
@@ -19,14 +19,14 @@
 {% block page %}
     <section id="main">
         <ul id="legend-work">
-            <li><span class="icon-rond"></span>GRAPHISME</li>
-            <li><span class="icon-goutte"></span>SÉRIGRAPHIE</li>
+            <li><span class="icon-ico-rond"></span>GRAPHISME</li>
+            <li><span class="icon-ico-goutte"></span>SÉRIGRAPHIE</li>
         </ul>
         <section id="portfolio">
             <aside id="projects">
                 <ul>
-                    <li class="goutte" data-seen="true"></li>
-                    <li class="goutte"></li>
+                    <li class="icon-ico-rond" data-seen="true"></li>
+                    <li class="icon-ico-rond"></li>
                     <li class="goutte"></li>
                     <li class="goutte"></li>
                     <li class="goutte"></li>
