--- a/dev/views/layouts/layout.html.twig
+++ b/dev/views/layouts/layout.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Goutte et rond</title>
 
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow" />
 
     <!-- Start of Facebook Meta Tags -->
     <meta property="og:title" content="caroleoreb.fr" />
@@ -26,7 +26,7 @@
         <header>
             <div id="main-infos">
                 <a href="/" target="_self" class="link-header">
-                    <span class="icon-Logo-goutte-et-rond"></span>
+                    <span class="icon-ico-goutteetrond"></span>
                 </a>
                 <h1>Victor Gouteyron</h1>
                 <h2>Graphiste - Sérigraphe</h2>
@@ -41,7 +41,6 @@
                 <ul id="navigation-header__elements">
                     <li><a href="details.html">DETAILS</a></li>
                     <li><a href="http://goutteetrond.tumblr.com/" target="_blank">BLOG</a></li>
-                    <li><a href="#">TWITTER</a></li>
                 </ul>
             </nav>
         </header>
