--- a/dev/assets/stylesheets/_main.scss
+++ b/dev/assets/stylesheets/_main.scss
@@ -33,6 +33,7 @@
             margin-bottom: 4px;
             position: relative;
             white-space: nowrap;
+            font-size: 16px;
 
             &:nth-child(4n-1), &:nth-child(2n) {
                 margin-left: 7px;
