start details page

--- a/dev/views/details.twig
+++ b/dev/views/details.twig
@@ -19,22 +19,21 @@
                     <li class="rond"></li>
                     <li class="rond"></li>
                     <li class="rond"></li>
-                </ul> 
+                </ul>
             </aside>
             <article id="project">
-                <figure id="container-images-project">
+                <figure id="container-flash">
                     <img src="http://lorempixel.com/output/city-q-c-841-480-3.jpg" alt="" />
                     <img src="http://lorempixel.com/output/city-q-c-841-480-3.jpg" alt="" />
                     <img src="http://lorempixel.com/output/city-q-c-841-480-3.jpg" alt="" />
                 </figure>
-                <div id="container-desc-project">
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div id="container-desc-goutteetrond">
+                    <p>Parlons nous, téléphonez, envoyez un mail, ou passez me voir dans l’atelier de sérigraphie 5 rue Paul Albert, 75018. <span style="color: #818a90;">(sur rendez vous). <br><br>
+
+                    We can talk, call, email or come and see me at Silkscreen workshop, 5 rue Paul Albert, 75018. (call first)</span>
+                    </p>
+
+                    {% include 'imports/friends-list.twig' %}
                 </div>
 
             </article>
