--- a/dev/assets/javascripts/tpl/ProjectsListItemTpl.hbs
+++ b/dev/assets/javascripts/tpl/ProjectsListItemTpl.hbs
@@ -1,3 +1,3 @@
-<li data-seen="false" class="{{ category }}">
+<li data-seen="false" class="{{ category }}" data-truc> 
     <a href="#/{{id}}"></a>
 </li>
